--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnectionPath": "Server=DESKTOP-D2BIPR4\\SQLEXPRESS;Database=UPDATE-37;Trusted_Connection=True;"
+    "DatabaseConnectionPath": "Server=DESKTOP-D2BIPR4\\SQLEXPRESS;Database=UPDATE-38;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
